kubernetes/platform/kafka/kafdrop/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    cert-manager.io/common-name: kafdrop.${CLUSTER_DOMAIN}
    # Enable external authentication using Oauth2-proxy
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.${CLUSTER_DOMAIN}/oauth2/start?rd=https://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
  labels:
    app.kubernetes.io/instance: kafdrop
    app.kubernetes.io/name: kafdrop
  name: kafdrop
spec:
  ingressClassName: nginx
  rules:
  - host: kafdrop.${CLUSTER_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: kafdrop
            port:
              name: kafdrop
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kafdrop.${CLUSTER_DOMAIN}
    secretName: kafdrop-tls
